--- a/package.json
+++ b/package.json
@@ -26,9 +26,12 @@
     "react-redux": "^8.1.1",
     "react-router-dom": "^6.14.1",
     "react-toastify": "^9.1.3",
-    "redux-persist": "^6.0.0"
+    "redux-persist": "^6.0.0",
+    "socket.io-client": "^4.7.1",
+    "timeago.js": "^4.0.2"
   },
   "devDependencies": {
+    "@types/codemirror": "^5.60.8",
     "@types/react": "^18.0.37",
     "@types/react-dom": "^18.0.11",
     "@vitejs/plugin-react": "^4.0.0",
