--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "pyright": "^1.1.319",
     "react": "^18.2.0",
     "react-ace": "^10.1.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
     "react-loader-spinner": "^5.3.4",
@@ -29,6 +30,7 @@
     "react-redux": "^8.1.1",
     "react-router-dom": "^6.14.1",
     "react-toastify": "^9.1.3",
+    "recharts": "^2.7.3",
     "redux-persist": "^6.0.0",
     "socket.io-client": "^4.7.1",
     "timeago.js": "^4.0.2"
